tests/machine/x/fs/group_items_iteration.error
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/machine/x/fs/group_items_iteration.fs(42,5): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (41:26). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/machine/x/fs/group_items_iteration.fs(42,5): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (41:26). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/machine/x/fs/group_items_iteration.fs(41,84): warning FS0064: This construct causes code to be less generic than indicated by the type annotations. The type variable 'K has been constrained to be type 'string'.

/workspace/mochi/tests/machine/x/fs/group_items_iteration.fs(42,11): error FS0001: This expression was expected to have type
    obj    
but here has type
    _Group<string,Anon1>    

/workspace/mochi/tests/machine/x/fs/group_items_iteration.fs(46,16): error FS0039: The field, constructor or member 'Items' is not defined

/workspace/mochi/tests/machine/x/fs/group_items_iteration.fs(48,41): error FS0039: The field, constructor or member 'key' is not defined

/workspace/mochi/tests/machine/x/fs/group_items_iteration.fs(49,76): error FS0001: The type 'obj' does not support the 'comparison' constraint. For example, it does not support the 'System.IComparable' interface

/workspace/mochi/tests/machine/x/fs/group_items_iteration.fs(49,92): error FS0001: Type mismatch. Expecting a
    obj * Anon2 -> obj    
but given a
    obj * Anon2 -> Anon2    
The type 'obj' does not match the type 'Anon2'
